server/webpack running, fixed syntax errors

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Hashbrown</title>
+	<title>TheRealestNews</title>
 	
 	<!-- Bootswatch -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/flatly/bootstrap.min.css">
@@ -19,9 +19,6 @@
 
 	<!-- All of our JS code will be transpiled into this bundle.js file -->
 	<script src="bundle.js"></script>
-
-	<!--socket.io -->
-	<script src="/socket.io/socket.io.js"></script>
 
 </body>
 </html>
