got the css working

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,13 @@
 	<!-- Font-Awesome -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 
+
+	<!-- CSS Styling -->
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    
+    <!-- favicon -->
+    <link rel="icon" href="images/.png" type="image" sizes="16x16">
+
 </head>
 
 <body>
